# caffeine-ng

./: .gitignore  .pre-commit-config.yaml  .woodpecker.yml  CHANGELOG.rst  README.md  README.rst  caffeine.1.scd  inhibit.py  meson.build
caffeine/: __init__.py  applicationinstance.py  cli.py  inhibitors.py  main.py  paths.py  procmanager.py  version.py
share/man/man1/: caffeine.1
translations/: LINGUAS  meson.build
